# MachineLearning_Project

./: .gitignore  README.md  api.py  explorations.ipynb  function_app.py  ingestion.py  pyproject.toml  requirements.txt
.github/workflows/: main_scriptchatbotwebapp.yml  main_transcriptchatbot.yml
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
