[project]
name = "machinelearning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "fastapi>=0.123.6",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic-ai>=1.26.0",
    "pypdf>=6.4.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.0",
    "torch",
    "transformers",
    "uvicorn>=0.38.0",
]
